external-crates/move/crates/move-compiler/tests/development/typing/signed_int_lambda.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_lambda.move:6:26
  │
6 │     macro fun apply($f: |i64| -> i64, $x: i64): i64 {
  │                          ^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_lambda.move:6:49
  │
6 │     macro fun apply($f: |i64| -> i64, $x: i64): i64 {
  │                                                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_lambda.move:11:18
   │
11 │         let _x = apply!(|x| -x, 5i64);
   │                  ^^^^^^^^^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_lambda.move:11:29
   │
11 │         let _x = apply!(|x| -x, 5i64);
   │                             ^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_lambda.move:14:27
   │
14 │     macro fun apply2($f: |i32, i32| -> i32, $a: i32, $b: i32): i32 {
   │                           ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_lambda.move:14:32
   │
14 │     macro fun apply2($f: |i32, i32| -> i32, $a: i32, $b: i32): i32 {
   │                                ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_lambda.move:14:64
   │
14 │     macro fun apply2($f: |i32, i32| -> i32, $a: i32, $b: i32): i32 {
   │                                                                ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_lambda.move:19:18
   │
19 │         let _x = apply2!(|a, b| a + b, 3i32, 4i32);
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_lambda.move:19:33
   │
19 │         let _x = apply2!(|a, b| a + b, 3i32, 4i32);
   │                                 ^^^^^ Signed integer types are under development
